# DjangoGramm

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env_example  example_env_file  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  webpack.config.js
DjangoGramm/: asgi.py  settings.py  urls.py  wsgi.py
DjangoGramm/Base/: base_repository.py
DjangoGramm/templates/: base.html  index.html
base_repository/: repository.py
base_test_case/: base_case.py  base_djangogramm_form_case.py  base_user_case.py  base_user_form_case.py
djangogramm/: manage.py
djangogramm/app/: admin.py  models.py
djangogramm/djangogramm/: asgi.py  settings.py  wsgi.py
djangogramm_app/: admin.py  apps.py  forms.py  models.py  repositories.py  urls.py  utils.py  views.py
djangogramm_app/migrations/: 0001_initial.py  0002_alter_avatar_image.py  0002_initial.py  0002_post_delete_avatar.py  0003_alter_post_picture.py  0003_alter_post_tags.py  0003_delete_avatar.py  0003_post_dislikes.py  0003_remove_post_picture_post_pictures.py  0004_alter_pictures_picture.py  0004_alter_post_pictures.py  (+9 more)
email_verification/: send_email_verification.py
email_veryfi/: send_email_for_verify.py
static_src/: main.js
templates/: base.html  index.html  profile.html
tests/: conftest.py  test_dajngogramm_forms.py  test_models.py  test_post_views.py  test_user_forms.py  test_users_views.py
users/: admin.py  forms.py  models.py  repositories.py  urls.py  utils.py  views.py
(+74 files in other folders)
